--- a/Astronomy(Obj-C)/Storyboards/Base.lproj/Main.storyboard
+++ b/Astronomy(Obj-C)/Storyboards/Base.lproj/Main.storyboard
@@ -64,14 +64,50 @@
                     <view key="view" contentMode="scaleToFill" id="yA6-d7-d9u">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eax-lw-clx">
+                                <rect key="frame" x="0.0" y="88" width="414" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="414" id="3ZY-L8-JZI"/>
+                                    <constraint firstAttribute="width" secondItem="Eax-lw-clx" secondAttribute="height" multiplier="1:1" id="Zfo-1k-dfh"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qri-tK-2qs">
+                                <rect key="frame" x="20" y="510" width="374" height="49"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by &lt;Rover&gt; on &lt;date&gt; (Sol &lt;sol&gt;)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="823-d2-Qav">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera: Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BpI-fC-GWJ">
+                                        <rect key="frame" x="0.0" y="28.5" width="374" height="20.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Qri-tK-2qs" firstAttribute="top" secondItem="Eax-lw-clx" secondAttribute="bottom" constant="8" id="8ZU-O5-SfL"/>
+                            <constraint firstItem="Eax-lw-clx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mG1-ak-dTn" secondAttribute="trailing" id="HnB-67-VRG"/>
+                            <constraint firstItem="Eax-lw-clx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="mG1-ak-dTn" secondAttribute="leading" id="LxR-uN-GgK"/>
+                            <constraint firstItem="Qri-tK-2qs" firstAttribute="leading" secondItem="mG1-ak-dTn" secondAttribute="leading" constant="20" id="baB-1a-vBE"/>
+                            <constraint firstItem="Eax-lw-clx" firstAttribute="top" secondItem="mG1-ak-dTn" secondAttribute="top" id="hR9-ZQ-7x2"/>
+                            <constraint firstItem="mG1-ak-dTn" firstAttribute="trailing" secondItem="Qri-tK-2qs" secondAttribute="trailing" constant="20" id="hY7-pt-2L7"/>
+                            <constraint firstItem="Eax-lw-clx" firstAttribute="centerX" secondItem="yA6-d7-d9u" secondAttribute="centerX" id="jYZ-CO-bz6"/>
+                            <constraint firstItem="mG1-ak-dTn" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Qri-tK-2qs" secondAttribute="bottom" constant="8" id="yQA-Ue-5b0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mG1-ak-dTn"/>
                     </view>
                     <navigationItem key="navigationItem" id="2jE-iL-s7w"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5f-qt-Kvl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1533" y="60"/>
+            <point key="canvasLocation" x="1531.8840579710145" y="59.598214285714285"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bbs-ZK-d9R">
