--- a/Astronomy(Obj-C)/Storyboards/Base.lproj/Main.storyboard
+++ b/Astronomy(Obj-C)/Storyboards/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Main Collection View Controller-->
         <scene sceneID="4Yr-d8-nJq">
             <objects>
-                <collectionViewController id="wu8-L2-fMI" sceneMemberID="viewController">
+                <collectionViewController id="wu8-L2-fMI" customClass="MainCollectionViewController" customModule="Astronomy_Obj_C_" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="J2L-RH-O7M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,10 +57,10 @@
             </objects>
             <point key="canvasLocation" x="711.59420289855075" y="59.598214285714285"/>
         </scene>
-        <!--View Controller-->
+        <!--Photo Detail View Controller-->
         <scene sceneID="lB8-L2-Cpf">
             <objects>
-                <viewController id="BDI-sT-OCo" sceneMemberID="viewController">
+                <viewController id="BDI-sT-OCo" customClass="PhotoDetailViewController" customModule="Astronomy_Obj_C_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yA6-d7-d9u">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -104,6 +104,11 @@
                         <viewLayoutGuide key="safeArea" id="mG1-ak-dTn"/>
                     </view>
                     <navigationItem key="navigationItem" id="2jE-iL-s7w"/>
+                    <connections>
+                        <outlet property="cameraInfoLabel" destination="BpI-fC-GWJ" id="HMc-YC-aE5"/>
+                        <outlet property="imageView" destination="Eax-lw-clx" id="xZK-B4-31X"/>
+                        <outlet property="photoInfoLabel" destination="823-d2-Qav" id="Chb-3L-AoG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5f-qt-Kvl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
